[package]
name = "multikey"
version = "1.0.7"
edition = "2021"
authors = ["Dave Grantham <dwg@linuxprogrammer.org>"]
description = "Multikey self-describing cryptographic key data"
repository = "https://github.com/cryptidtech/multikey.git"
readme = "README.md"
license = "Apache-2.0"

[features]
default = ["serde"]

[dependencies]
bcrypt-pbkdf = "0.10"
blsful = "2.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
elliptic-curve = "0.13"
hex = "0.4"
k256 = "0.13"
multibase = { version = "1.0", git = "https://github.com/cryptidtech/rust-multibase.git" }
multicodec = { version = "1.0", git = "https://github.com/cryptidtech/rust-multicodec.git" }
multihash = { version = "1.0", git = "https://github.com/cryptidtech/multihash.git" }
multisig = { version = "1.0", git = "https://github.com/cryptidtech/multisig.git" }
multitrait = { version = "1.0", git = "https://github.com/cryptidtech/multitrait.git" }
multiutil = { version = "1.0", git = "https://github.com/cryptidtech/multiutil.git" }
rand = "0.8"
sec1 = "0.7"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
sodiumoxide = "0.2"
ssh-key = { version = "0.6", features = ["alloc", "crypto", "ed25519"]}
ssh-encoding = "0.2"
thiserror = "1.0"
typenum = "1.17"
unsigned-varint = { version = "0.8", features = ["std"]}
vsss-rs = "3.4"
zeroize = "1.7"

[dev-dependencies]
serde_test = "1.0"
serde_cbor = "0.11"
serde_json = "1.0"
